@@ -9,6 +9,7 @@ TODO:
  + Added string_length to [Settings] as well (used internally) for all "injected" buffers.
  * Fixed issue with scripts result truncated efter 1024 chars 
     (now they return "all" output and thus you can use the NRPE settings I adde yesterday :)
+ + Added hostname setting to [NSCA] section (must have been braindead when I did not add it before)
 
 2008-02-12 MickeM
  + Added new option for the [NRPE] section string_length which is the length of the NRPE strings 
